<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

  <TextView
      android:id="@+id/txtIntrDatosNombre"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tvDateBirth"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:background="@color/blueCian"
      android:shadowColor="@color/blueCian"
      android:text="@string/date_of_birth"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtIntrDatosNombre" />

  <RadioGroup
      android:id="@+id/radioGroup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvDateBirth">

    <RadioButton
        android:id="@+id/rbPresencial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/presencial" />

    <RadioButton
        android:id="@+id/rbSemipresencial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semipresencial" />
  </RadioGroup>

  <RadioGroup
      android:id="@+id/radioGroup2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:orientation="horizontal"
      android:paddingLeft="16dp"
      android:paddingRight="40dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/radioGroup">

    <RadioButton
        android:id="@+id/rbASIR"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:text="@string/asir" />

    <RadioButton
        android:id="@+id/rbDAW"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:text="@string/daw" />

    <RadioButton
        android:id="@+id/rbDAM"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:text="@string/dam" />
  </RadioGroup>

  <Button
      android:id="@+id/btAceptar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/aceptar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

  <Button
      android:id="@+id/btCancelar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/cancelar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btAceptar" />
</androidx.constraintlayout.widget.ConstraintLayout>